--- a/2.HuggingFace 시작.md
+++ b/2.HuggingFace 시작.md
@@ -60,7 +60,7 @@ print(result)
 (실행 전 pip install pillow 필요)
 ```
 from transformers import pipeline
-from PIL import Image
+from PIL import Image //Python Image Library
 import requests
 
 # 온라인 이미지 불러오기
@@ -106,3 +106,4 @@ tokenizer.push_to_hub(repo_id)
 
 print(f"업로드 완료: [https://huggingface.co/](https://huggingface.co/){repo_id}")
 ```
+
